# Superinput

./: .gitignore  .impeccable.md  README.md  background.js  index.html  manifest.json  package.json  pnpm-lock.yaml  popup.css  sidepanel.css  sidepanel.html  sidepanel.js  vite.config.ts
chrome-extension/: README.md  background.js  content.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  sidepanel.css  sidepanel.html  sidepanel.js
chrome-extension/tests/: background-flow.mjs  e2e-chrome.mjs
src/: App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: input.rs  main.rs  settings.rs  translation.rs
tests/: background-flow.mjs  content-capture.mjs  e2e-chrome.mjs
